--- a/INDEX.html
+++ b/INDEX.html
@@ -29,7 +29,7 @@
           <div class="left">
             <div class="text-3d">
               <span class="text-blue">SISTEMA DE</span>
-              <span class="text-red">CARNETIZACIÓN DIGITALXD</span>
+              <span class="text-red">CARNETIZACIÓN DIGITAL</span>
             </div>
           </div>
          <div class="right">
