--- a/INDEX.html
+++ b/INDEX.html
@@ -58,7 +58,7 @@
 
           <div class="form">
             <form action="src/login.php" method="post">
-                <label for="password">INGRESE SU NúMERO CéDULA</label>
+                <label for="password">INGRESE SU NÚMERO CÉDULA</label>
                 <input type="text" name="CI" pattern="^\d{10}$" title="La cédula debe tener exactamente 10 dígitos" required>
                 <button type="submit" name="action" value="Ingresar">Ingresar</button>
             </form>
